--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,7 @@
 .App {
   text-align: center;
   background-color:rgba(0, 190, 120, 0.15);
+  font-family: 'Neucha', cursive;
   
   .content-wrapper {
     max-width: 1220px;
