--- a/src/home/home.scss
+++ b/src/home/home.scss
@@ -7,11 +7,6 @@
 }
 
 .main-text {
-  margin: 60px 0;
-  font-size: 22px;
-}
-
-.video-wrapper {
-  width: 60%;
-  margin: 0 auto;
+  margin: 0 70px 70px 70px;
+  font-size: 33px;
 }
