--- a/src/header/header.scss
+++ b/src/header/header.scss
@@ -2,16 +2,16 @@
   position: absolute;
   z-index: 2;
   width: 100%;
-  background-color:rgba(0, 0, 0, 0.1);
+  background-color:rgba(256, 256, 256, 0.3);
   transition: 0.75s;
   
-  a { 
-    color: white !important;
+  a {
+    font-size: 28px;
     font-weight: bold;
   }
 }
 
 .nav.scrolled {
   position: fixed;
-  background: black;
+  background-color:rgba(256, 256, 256, 0.9);
 }
