--- a/src/home/home.scss
+++ b/src/home/home.scss
@@ -7,6 +7,16 @@
 }
 
 .main-text {
-  margin: 0 70px 70px 70px;
-  font-size: 33px;
+  margin: 0 0px 70px 0px;
+  font-size: 29px;
+}
+
+.location-text {
+  margin: 40px 0;
+  text-align: left;
+  font-size: 24px;
+  
+  span.tab {
+    margin-left: 20px;
+  }
 }
