--- a/src/header/header.scss
+++ b/src/header/header.scss
@@ -7,9 +7,11 @@
   
   .navbar {
     a {
-      font-size: 28px;
+      color: black;
+      margin-right: 15px;
+      font-size: 24px;
       position: relative;
-      top: 10px;
+      top: 15px;
     }
   } 
 }
@@ -27,7 +29,7 @@
   right: 0;
   bottom: 0;
   margin: 0 auto;
-  font-size: 20px;
+  font-size: 18px;
   height: 40px;
   
   .contact-item {
