--- a/src/home/home.scss
+++ b/src/home/home.scss
@@ -6,6 +6,12 @@
   }
 }
 
+.content-wrapper {
+  video {
+    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+  }
+}
+
 .main-text {
   margin: 0 0px 70px 0px;
   font-size: 29px;
