change bg color

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,6 @@
 .App {
   text-align: center;
-  background-color:rgba(0, 190, 120, 0.15);
+  background: linear-gradient(#d9a7c7, #fffcdc);
   font-family: 'Neucha', cursive;
   
   .content-wrapper {
