add new bg and font

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,7 @@
 .App {
   text-align: center;
-  background: linear-gradient(#d9a7c7, #fffcdc);
-  // font-family: 'Neucha', cursive;
+  background: linear-gradient(#b0dab9, #dad299);
+  font-family: 'Gabriela', serif;
   
   .content-wrapper {
     max-width: 1220px;
