--- a/src/App.scss
+++ b/src/App.scss
@@ -2,6 +2,7 @@
   text-align: center;
   background: linear-gradient(#b0dab9, #dad299);
   font-family: 'Gabriela', serif;
+  overflow: hidden;
   
   .content-wrapper {
     max-width: 1220px;
