--- a/src/gallery/gallery.scss
+++ b/src/gallery/gallery.scss
@@ -1,18 +1,68 @@
-.img-gallery-container {
+.gallery-container {
   padding-top: 141px;
+  max-width: 1220px;
+  margin: 0 auto;
   
-  .mini-gallery {
-    display: flex;
-    position: relative;
-    flex-wrap: nowrap;
+  @media screen and (max-width: 992px) {
+    padding-top: 200px;
+  }
+  
+  h1 {
+    margin-top: 50px;
     
-    .image-gallery {
-      width: 50%;
+    @media screen and (max-width: 992px) {
+      font-size: 30px;
+    }
+  }
+  
+  .logo {
+    width: 100%;
+  }
+  
+  .images {
+    img {
+      width: 100%;
+      height: 100%;
+      min-height: 600px;
+      margin-bottom: 10px;
+      transform: translateX(50%);
+      opacity: 0;
+      transition: all 500ms;
+      box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+      
+      @media screen and (max-width: 992px) {
+        min-height: 200px;
+      }
     }
     
-    .gallery-info {
-      width: 50%;
-      margin: auto;
+    .fade {
+      transform: translateX(0);
+      opacity: 1.0;
+      transition: all 500ms;
+    }
+    
+    h2 {
+      margin-top: 50px;
+      margin-left: 10px;
+      text-align: left;
+      
+      @media screen and (max-width: 992px) {
+        font-size: 24px;
+      }
+    }
+  }
+  
+  .inner-nav {
+    position: fixed;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    bottom: 0;
+    background-color:rgba(256, 256, 256, 0.9);
+    
+    a {
+      padding: 10px 2px;
+      color: black;
     }
   }
 }
