--- a/src/gallery/gallery.scss
+++ b/src/gallery/gallery.scss
@@ -51,8 +51,9 @@
       }
     }
   }
-  
-  .inner-nav {
+}
+
+.inner-nav {
     position: fixed;
     width: 100%;
     display: flex;
@@ -61,10 +62,13 @@
     background-color:rgba(256, 256, 256, 0.9);
     
     a {
-      padding: 10px 2px;
       color: black;
+      
+      padding: 15px 30px;
+      @media screen and (max-width: 992px) {
+        padding: 10px 2px;
+      }
     }
   }
-}
 
 
